--- a/blade/blade.vcxproj.filters
+++ b/blade/blade.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="blade.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="net.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
