--- a/blade/blade.vcxproj.filters
+++ b/blade/blade.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="server.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="session.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="server.hpp">
@@ -30,6 +33,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="net.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="session.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
